# mosquitto_mod

./: mosquitto.conf  mosquitto_external.conf
plugins/msg-splitter/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libmodules  mosquitto_msg_splitter.c
plugins/msg-splitter/cpp-modules/: config.yml  doc_processor.cpp  doc_processor.h  mio_programma  my_cpp_module.cpp  my_cpp_module.h  process.cpp  process.hpp  user_functions.cpp  user_functions.h  wrapper.cpp  wrapper.h  yaml_loader_full.cpp
plugins/msg-splitter/cpp-modules/backup/: process.hpp  yaml_loader_full.cpp
plugins/msg-splitter/test/: a.out  test.cpp  test2.cpp  testcsv.cpp  testcsvsplit.cpp
plugins/payload-modification/: mosquitto_payload_modification.c
src/: plugin_public.c
